added xlsx generation

--- a/KursScript.ipynb
+++ b/KursScript.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,19 +65,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "root_dir = r'C:\\Users\\rudi\\Documents\\Tina\\WebexKurse\\15.3-25.3'\n",
     "data_frames = read_files(root_dir)\n",
-    "consolidate_data = []\n",
+    "consolidated_data = []\n",
     "for k,v in data_frames.items():\n",
     "    df = v[0]\n",
     "    name = v[1]\n",
+    "    course_name = v[2]\n",
     "    (df_cons, date) = consolidate(df)\n",
-    "    filename = os.path.join(root_dir, f'{name}_{date}.tsv')\n",
-    "    save(df_cons, filename)"
+    "    consolidated_data.append((df_cons, date, course_name))\n",
+    "    #filename = os.path.join(root_dir, f'{name}_{date}.tsv')\n",
+    "    #save(df_cons, filename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Render Course Information into an Excel Workbook"
    ]
   },
   {
@@ -85,14 +94,49 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def create_excel(filename, dataframes, sheet_name='Sheet1'):\n",
+    "    # Create a Pandas Excel writer using XlsxWriter as the engine.\n",
+    "    writer = pd.ExcelWriter(filename, engine='xlsxwriter')\n",
+    "    workbook = writer.book\n",
+    "    header_format = workbook.add_format({'bg_color': '#689BCA', 'bold': True})\n",
+    "    start = 1\n",
+    "    \n",
+    "    for (df_cons, date, course_name) in dataframes:        \n",
+    "        \n",
+    "        # df1.to_excel(writer,sheet_name=sheetname, startrow=writer.sheets[sheetname].max_row, index = False,header= False)\n",
+    "        # Convert the dataframe to an XlsxWriter Excel object.\n",
+    "        print(f'{course_name}_{date}')\n",
+    "        \n",
+    "        df_cons.to_excel(writer, sheet_name=sheet_name, index=False, startrow=start)\n",
+    "        worksheet = writer.sheets[sheet_name]\n",
+    "        worksheet.write(start-1, 0, f'{course_name}_{date}', header_format)\n",
+    "        start += len(df_cons) + 4\n",
+    "\n",
+    "    # Close the Pandas Excel writer and output the Excel file.\n",
+    "    writer.save()\n",
+    "    writer.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "print(consolidated_data[0][0].head())"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "create_excel('Kurse_15.03_25.03.2021.xlsx', consolidated_data)"
+   ]
   }
  ],
  "metadata": {
